Feat/Changed Workflow name

--- a/.github/workflows/TestCheckout.yaml
+++ b/.github/workflows/TestCheckout.yaml
@@ -1,4 +1,4 @@
-name: Test workflow of coping the repo into the home directory
+name: SelfHosted-Workflow
 on:
     pull_request:
         branches:
